# blocky

./: .gitignore  CMakeLists.txt  README.md
include/: bitwriter.hpp  block.hpp  blockyalgorithm.hpp  blockycompression.hpp  blockyintputstream.hpp  blockymetadata.hpp  blockynumber.hpp  blockyoutputstream.hpp  blockystreambase.hpp  blockystreambuffer.hpp  compressedsection.hpp  compressionsplitter.hpp  hooker.hpp  lexer.hpp  parser.hpp  reporter.hpp  token.hpp  tokentype.hpp
include/blockfinding/: blockcalculation.hpp  blockfinding.hpp  blockreplacingcalculation.hpp  patternpredictor.hpp
include/io/: blockyintputstream.hpp  blockyoutputstream.hpp  blockystreambuffer.hpp
include/methods/: compressionmethod.hpp  methods.hpp
include/methods/floatsimmilar/: floatsimmilarcompression.hpp
include/methods/numbersnoexp/: numbersnoexpcompression.hpp
include/parsing/: hooker.hpp  lexer.hpp  parser.hpp  positionprovider.hpp  token.hpp
include/parsing2/: blockyparser.hpp  charparser.hpp  data.hpp  listparser.hpp  mainparser.hpp  parser.hpp
resources/: U.small  alpha.water  alpha.water.short  alpha.water.small
src/: bitreader.cpp  bitreader.hpp  bitwriter.cpp  bitwriter.hpp  block.cpp  block.hpp  blockyalgorithm.hpp  blockycompression.cpp  blockycompression.hpp  blockydecompression.cpp  blockydecompression.hpp  blockymetadata.cpp  blockymetadata.hpp  blockynumber.cpp  blockynumber.hpp  blockynumbersaver.cpp  blockynumbersaver.hpp  blockystreambase.cpp  blockystreambuffer.cpp  compressedsection.hpp  compressionsplitter.cpp  compressionsplitter.hpp  lexer.cpp  lzmaio.cpp  lzmaio.hpp  main.cpp  marerreporter.cpp  marerreporter.hpp  reporter.hpp
src/blockfinding/: blockcalculation.hpp  blockfinding.cpp  blockfinding.hpp  blockreplacingcalculation.hpp  headersizes.hpp  patternpredictor.hpp
src/decomp/: decompinputstream.hpp  decompstreambase.cpp  decompstreambase.hpp  decompstreambuffer.cpp  decompstreambuffer.hpp
src/io/: blockyinputstream.hpp  blockyoutputstream.hpp  blockystreambase.cpp  blockystreambase.hpp  blockystreambuffer.cpp  blockystreambuffer.hpp
src/methods/: compressionmethod.cpp  compressionmethod.hpp  decompressionmethod.cpp  decompressionmethod.hpp  methods.hpp
src/parsing/: blockyparser.cpp  blockyscalarparser.cpp  blockyscalarparser.hpp  blockytensorparser.cpp  blockytensorparser.hpp  blockyvectorparser.cpp  blockyvectorparser.hpp  charparser.cpp  charparser.hpp  directivetype.hpp  hooker.cpp  hooker.hpp  lexer.cpp  lexer.hpp  listparser.cpp  listparser.hpp  listtype.hpp  mainparser.cpp  mainparser.hpp  parser.cpp  parser.hpp  positionprovider.hpp  token.hpp
src/parsing2/: blockyparser.cpp  blockyparser.hpp  charparser.cpp  charparser.hpp  compressedsectionparser.cpp  compressedsectionparser.hpp  decompression.hpp  decompressionparser.cpp  decompressionparser.hpp  hooker.cpp  hooker.hpp  listparser.cpp  listparser.hpp  mainparser.cpp  mainparser.hpp  parser.hpp
test/: blockynumber_test.cpp  catch.hpp  test.cpp
(+30 files in other folders)
